<resources>
    <string name="app_name">frontend</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="portfolioxchange">PortfolioXChange</string>
    <string name="back">Back</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="upload">Upload</string>
    <string name="image_upload">Image Upload</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="nature">Nature</string>
    <string name="automotive">Automotive</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="select_image">Select Image</string>
    <string name="upload_page">Upload Page</string>
    <string name="food">Food</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
</resources>