<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.frontend.MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/upload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_uploaded"
        android:orderInCategory="100"
        android:title="Uploaded Images"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_shared"
        android:orderInCategory="100"
        android:title="Shared With Me"
        app:showAsAction="never" />
</menu>